// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListEditorField function should return <FreeTextListEditor> with specified props 1`] = `
<FreeTextListEditor
  error={true}
  errorText="test1"
  input={
    {
      "onChange": [MockFunction],
    }
  }
  maxInputLength={100}
  meta={
    {
      "error": "test1",
    }
  }
  onChange={[MockFunction]}
  remindToAdd="test2"
/>
`;

exports[`ListEditorField function should return <FreeTextListEditor> with specified props 2`] = `
<FreeTextListEditor
  errorText={null}
  input={
    {
      "onChange": [MockFunction],
    }
  }
  maxInputLength={100}
  onChange={[MockFunction]}
  remindToAdd="test2"
/>
`;
